--- a/WanderLost/WanderLost/Client/App.razor
+++ b/WanderLost/WanderLost/Client/App.razor
@@ -1,15 +1,16 @@
-﻿<CascadingAuthenticationState>
+﻿@*<CascadingAuthenticationState>*@
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"></RouteView>
+            @*<AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
                     <h3>Must be logged in.</h3>
                 </NotAuthorized>
                 <Authorizing>
                     <h3>Checking login state...</h3>
                 </Authorizing>
-            </AuthorizeRouteView>
-            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+            </AuthorizeRouteView>*@
+            <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
         </Found>
         <NotFound>
             <PageTitle>Not found</PageTitle>
@@ -18,4 +19,4 @@
             </LayoutView>
         </NotFound>
     </Router>
-</CascadingAuthenticationState>
+@*</CascadingAuthenticationState>*@
