--- a/WanderLost/WanderLost/Client/Pages/Notifications.razor
+++ b/WanderLost/WanderLost/Client/Pages/Notifications.razor
@@ -12,14 +12,14 @@
     <div class="form-check col-6 m-3">
         <input class="form-check-input" type="checkbox" checked="@ClientSettings.NotifyBrowserSoundEnabled" id="browserSound" @onclick="@ToggleNotifyBrowserSoundEnabled">
         <label class="form-check-label" for="browserSound">
-            Play sound when matching item found. Volume:
+            出现相匹配的东西时通知。音量:
         </label>
         <input type="range" value="@(ClientSettings.SoundVolume * 100)" @onchange="@ChangeVolumeAndPlayTestSound"/>
     </div>
     <div class="form-check col-6 m-3">
         <input class="form-check-input" type="checkbox" checked="@ClientSettings.RareSoundsOnly" id="rareSound" @onclick="@ToggleRareSoundOnly">
         <label class="form-check-label" for="rareSound">
-            Play sound only for rare combinations
+            出现稀有组合的时候通知
         </label>
     </div>
 </div>
@@ -28,7 +28,7 @@
     <div class="form-check col-6 m-3">
         <input class="form-check-input" type="checkbox" checked="@ClientSettings.BrowserNotifications" id="browserNotification" @onclick="@ToggleBrowserNotifications">
         <label class="form-check-label" for="browserNotification">
-            Use In-Browser Notifications
+            使用浏览器的通知
         </label>
     </div>
     <div class="row my-2">
@@ -38,7 +38,7 @@
     </div>
     <div class="row my-2">
         <div class="col-6">
-            <span class="form-control-plaintext">Minimum upvotes for alert on <ItemDisplay Item="@(new Item { Name = "legendary Card", Rarity = Rarity.Legendary })" /> </span>
+            <span class="form-control-plaintext">传奇卡出现最低点赞通知数: <ItemDisplay Item="@(new Item { Name = "legendary Card", Rarity = Rarity.Legendary })" /> </span>
         </div>
         <div class="col-auto">
             <input type="number" class="form-control" @bind="CardVoteThresholdWrapper" />
@@ -46,7 +46,7 @@
     </div>
     <div class="row my-2">
         <div class="col-6">
-            <span class="form-control-plaintext">Minimum upvotes for alert on <ItemDisplay Item="@(new Item { Name = "legendary Rapport", Rarity = Rarity.Legendary })" /> </span>
+            <span class="form-control-plaintext">传奇好感出现最低点赞通知数: <ItemDisplay Item="@(new Item { Name = "legendary Rapport", Rarity = Rarity.Legendary })" /> </span>
         </div>
         <div class="col-auto">
             <input type="number" class="form-control" @bind="RapportVoteThresholdWrapper" />
@@ -66,7 +66,7 @@
                     <ul>
                         <li class="d-block">
                             <NotificationIcon Enabled="IsMerchantValueNotified(key, NotificationSettingType.Spawn, key)" StateChanged="@(_ => OnNotificationToggle(NotificationSettingType.Spawn, key, key))" />
-                            <span>Notify on Spawn</span>
+                            <span>通知开关</span>
                         </li>
                     </ul>
                 </li>
