--- a/WanderLost/WanderLost/Client/Pages/NotificationsHelp.razor
+++ b/WanderLost/WanderLost/Client/Pages/NotificationsHelp.razor
@@ -7,7 +7,7 @@
 <p class="mb-3">Can't get notifications to work? Here are some solutions to common issues.</p>
 
 <FaqSection Header="How to enable notifications?" IsOpen="@_initialSectionState["enableNotif"]">
-    <p>To enable notifications, simply click on the <b>Merchant notifications</b> toggle at the top right of the page. On the first time you need to grant permission to this website to send notifications to you, see GIF below:</p>
+    <p>To enable notifications, simply click on the <b>流浪商人出现通知</b> toggle at the top right of the page. On the first time you need to grant permission to this website to send notifications to you, see GIF below:</p>
     <div class="imgbox">
         <img class="center-fit" src="images/notificationshelp/EnableNotifications.gif" alt="how to enable notifications" />
     </div>
