--- a/WanderLost/WanderLost/Client/Pages/Merchants.razor
+++ b/WanderLost/WanderLost/Client/Pages/Merchants.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Lost Merchants</PageTitle>
+<PageTitle>流浪商人</PageTitle>
 
 @if (ClientSettings.NotificationsEnabled && ClientSettings.NotifyBrowserSoundEnabled)
 {
