--- a/WanderLost/WanderLost/Client/Components/FutureMerchantsGrid.razor
+++ b/WanderLost/WanderLost/Client/Components/FutureMerchantsGrid.razor
@@ -1,10 +1,10 @@
-﻿<h3 class="mt-3">Upcoming Merchants</h3>
+﻿<h3 class="mt-3">即将出现的商人</h3>
 <table class="table">
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Region</th>
-            <th>Next Appearance In</th>
+            <th>姓名</th>
+            <th>区域</th>
+            <th>下次出现时间</th>
         </tr>
     </thead>
     <tbody>
