--- a/WanderLost/WanderLost/Client/Shared/NavMenu.razor
+++ b/WanderLost/WanderLost/Client/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
         <div class="@NavMenuCssClass navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">流浪商人</NavLink>
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">商人地区</NavLink>
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="Notifications" Match="NavLinkMatch.All">通知设置</NavLink>
