--- a/WanderLost/WanderLost/Client/Components/ActiveMerchantsGrid.razor
+++ b/WanderLost/WanderLost/Client/Components/ActiveMerchantsGrid.razor
@@ -60,7 +60,7 @@
                         <button class="btn btn-sm @GetVoteButtonCss(merchant.Id, VoteType.Upvote)" alt="Upvote" @onclick="@(async m => await SubmitVote(merchant.Id, VoteType.Upvote))"><span class="oi oi-thumb-up"></span></button>
                         <button class="btn btn-sm @GetVoteButtonCss(merchant.Id, VoteType.Downvote)" alt="Downvote" @onclick="@(async m => await SubmitVote(merchant.Id, VoteType.Downvote))"><span class="oi oi-thumb-down"></span></button>
                     </td>
-                    <td rowspan="@rowSpan"><a class="link-danger" href="/UpdateMerchant/@Server/@merchantGroup.MerchantName">Suggest Replacement</a></td>
+                    <td rowspan="@rowSpan"><a class="link-danger" href="/UpdateMerchant/@Server/@merchantGroup.MerchantName">重新提交</a></td>
                 }
             </tr>
             @foreach (var merchant in merchantGroup.ActiveMerchants.OrderByDescending(x => x.Votes).Skip(1))
